--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -17,14 +17,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PersonCell" id="sd4-KE-mK5">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PersonCell" id="sd4-KE-mK5" customClass="PersonTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sd4-KE-mK5" id="z7D-wK-AIU">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oqb-QW-iek">
+                                            <rect key="frame" x="350.5" y="0.0" width="43.5" height="43.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="oqb-QW-iek" secondAttribute="height" multiplier="1:1" id="u0T-wF-nmo"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h18-Og-8Bj">
+                                            <rect key="frame" x="40" y="11.5" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="oqb-QW-iek" secondAttribute="bottom" id="05F-Be-gDt"/>
+                                        <constraint firstItem="oqb-QW-iek" firstAttribute="top" secondItem="z7D-wK-AIU" secondAttribute="top" id="5Gt-Nn-STK"/>
+                                        <constraint firstAttribute="trailing" secondItem="oqb-QW-iek" secondAttribute="trailing" constant="20" id="LMj-yY-m90"/>
+                                        <constraint firstItem="h18-Og-8Bj" firstAttribute="centerY" secondItem="z7D-wK-AIU" secondAttribute="centerY" id="a38-6r-iIt"/>
+                                        <constraint firstItem="oqb-QW-iek" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="h18-Og-8Bj" secondAttribute="trailing" constant="8" id="nIY-sW-446"/>
+                                        <constraint firstItem="h18-Og-8Bj" firstAttribute="leading" secondItem="z7D-wK-AIU" secondAttribute="leadingMargin" constant="20" id="w6n-BI-UHM"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="nameLabel" destination="h18-Og-8Bj" id="ec9-C9-dbm"/>
+                                    <outlet property="personImageView" destination="oqb-QW-iek" id="2Pa-PT-R0T"/>
                                     <segue destination="FRf-r2-3Pb" kind="show" identifier="PersonDetailSegue" id="Kpv-nR-DnC"/>
                                 </connections>
                             </tableViewCell>
@@ -38,7 +62,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ktR-e8-R0k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="616" y="116"/>
+            <point key="canvasLocation" x="615.94202898550725" y="115.84821428571428"/>
         </scene>
         <!--Person Detail View Controller-->
         <scene sceneID="gnf-Re-4Ln">
