--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kJE-Nb-vGe">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--People Table View Controller-->
+        <scene sceneID="6Ub-sv-aRO">
+            <objects>
+                <tableViewController id="oOZ-Aj-eze" customClass="PeopleTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="rP6-Vq-Iet">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PersonCell" id="qtj-5u-syh" customClass="PeopleTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qtj-5u-syh" id="btF-Iu-WFh">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J0U-IF-OM2">
+                                            <rect key="frame" x="8" y="0.0" width="43.5" height="43.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="J0U-IF-OM2" secondAttribute="height" multiplier="1:1" id="kKh-b6-oCg"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WXc-yI-jaV">
+                                            <rect key="frame" x="59.5" y="11" width="291.5" height="22"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="WXc-yI-jaV" firstAttribute="leading" secondItem="J0U-IF-OM2" secondAttribute="trailing" constant="8" id="1rZ-Ow-u1W"/>
+                                        <constraint firstItem="J0U-IF-OM2" firstAttribute="leading" secondItem="btF-Iu-WFh" secondAttribute="leading" constant="8" id="a2U-eu-XqM"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="WXc-yI-jaV" secondAttribute="trailing" constant="8" id="cvd-lV-tXx"/>
+                                        <constraint firstItem="WXc-yI-jaV" firstAttribute="top" secondItem="btF-Iu-WFh" secondAttribute="topMargin" id="fvC-sg-GdF"/>
+                                        <constraint firstItem="J0U-IF-OM2" firstAttribute="top" secondItem="btF-Iu-WFh" secondAttribute="top" id="lve-xx-kJd"/>
+                                        <constraint firstAttribute="bottom" secondItem="J0U-IF-OM2" secondAttribute="bottom" id="oG7-9V-UoY"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="WXc-yI-jaV" secondAttribute="bottom" id="tYV-dD-d3t"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="WXc-yI-jaV" id="Ikq-JX-mrc"/>
+                                    <outlet property="thunbnailImage" destination="J0U-IF-OM2" id="2je-Ub-oQg"/>
+                                    <segue destination="69X-MI-Y40" kind="show" identifier="PersonDetailSegue" id="aep-F1-uXi"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="oOZ-Aj-eze" id="0qV-QH-Jja"/>
+                            <outlet property="delegate" destination="oOZ-Aj-eze" id="0mQ-Dp-0Lx"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="qwo-XX-QDk"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xEd-3t-tGU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="800.79999999999995" y="31.934032983508249"/>
+        </scene>
+        <!--Person Detail View Controller-->
+        <scene sceneID="uya-3Y-H7X">
+            <objects>
+                <viewController id="69X-MI-Y40" customClass="PersonDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1mz-Hd-8u7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="dkg-WZ-g0N"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J4q-fa-rVc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1502" y="32"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ogL-1G-m8p">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kJE-Nb-vGe" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hF0-gy-26R">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oOZ-Aj-eze" kind="relationship" relationship="rootViewController" id="89a-BH-XlW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bpb-Ot-ab5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="104.8" y="31.934032983508249"/>
+        </scene>
+    </scenes>
 </document>
